# mlm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .remarkignore  .safety-policy.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING_STAC_MODEL.md  Makefile  README.md  README_DLM_LEGACY.md  README_STAC_MODEL.md  best-practices.md  example.json  index.html  package.json  pyproject.toml  stac-model.bump.toml
.github/: .stale.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  remark.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  citation.yaml  greetings.yml  publish.yaml  release-drafter.yml  stac-model.yml  test.yaml
docker/: Dockerfile  README.md
docs/legacy/: dlm.md  ml-model.md
examples/: collection.json  example.json  example_eo_bands.json  item.json  item.yml  item_bands_expression.json  item_basic.json  item_datacube_variables.json  item_eo_and_raster_bands.json  item_eo_bands.json  item_eo_bands_summarized.json  item_multi_io.json  item_pytorch_geo_unet.json  item_raster_bands.json  mlm-metadata.yaml  model-arch-summary.txt
examples/dlm-legacy/: item.yml
examples/torch/: mlm-metadata.yaml
json-schema/: schema.json
stac_model/: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  __main__.py  base.py  example.json  examples.py  geometry_models.py  input.py  model_metadata.py  output.py  pyproject.toml  requirements.txt  runtime.py  schema.py  utils.py
stac_model/.github/: PULL_REQUEST_TEMPLATE.md
stac_model/.github/ISSUE_TEMPLATE/: question.md
stac_model/.github/workflows/: build.yml
stac_model/export/: torch.py
stac_model/frameworks/torch/: __init__.py  export.py  utils.py
stac_model/frameworks/torch_impl/: __init__.py  export.py
stac_model/stac_model/: __init__.py  __main__.py  input.py  main.py  output.py  paths.py  runtime.py  schema.py
stac_model/tests/: test_schema.py
stac_model/torch/: __init__.py  base.py  export.py  utils.py
tests/: conftest.py  test_examples.py  test_schema.py  test_stac_model.py  test_unet_mlm.py
tests/torch/: ftw-metadata.yaml  metadata.yaml  test_export.py  test_metadata.py  test_unet_mlm.py
tests/torch_impl/: test_unet_mlm.py
v1.0.0/: schema.json
v1.1.0/: schema.json
v1.2.0/: schema.json
v1.3.0/: schema.json
v1.4.0/: schema.json
v1.5.2/: schema.json
